# remote

./: README.md  action.yaml  pyproject.toml
remote/: Dockerfile  __main__.py
